# lab-5-7-sanya-i-vanya

./: CMakeLists.txt
src/: CMakeLists.txt
src/resource_cli/: CMakeLists.txt
src/resource_cli/src/: main.cpp
src/resource_core/include/lab5/resource/: document.h  document.hpp  document_builder.h  document_builder.hpp  inverted_index.h  inverted_index.hpp
src/resource_core/src/: inverted_index.cpp
tests/: CMakeLists.txt  tests.cpp
